<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".login.ui.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/middle_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/middle_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:hint="@string/login_activity_error_label"
        android:inputType="textEmailAddress" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/middle_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:hint="@string/login_activity_password_hint"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/middle_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/login_activity_login_label"
        android:textAllCaps="false" />
</LinearLayout>