<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emailTextView"
                style="@style/Theme.LoginApp.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_email_label"
                app:layout_constraintBottom_toTopOf="@id/firstNameTextView"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emailValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/middle_text_size"
                app:layout_constraintBottom_toBottomOf="@id/emailTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/emailTextView"
                tools:text="test@test.com" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/firstNameTextView"
                style="@style/Theme.LoginApp.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_first_name_label"
                app:layout_constraintBottom_toTopOf="@id/lastNameTextView"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/firstNameValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/middle_text_size"
                app:layout_constraintBottom_toBottomOf="@id/firstNameTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/firstNameTextView"
                tools:text="first simple name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lastNameTextView"
                style="@style/Theme.LoginApp.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_last_name"
                app:layout_constraintBottom_toTopOf="@id/birthDateTextView"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstNameTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lastNameValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/middle_text_size"
                app:layout_constraintBottom_toBottomOf="@id/lastNameTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/lastNameTextView"
                tools:text="last simple name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/birthDateTextView"
                style="@style/Theme.LoginApp.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_birth_date"
                app:layout_constraintBottom_toTopOf="@id/notesTextView"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastNameTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/birthDateValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/middle_text_size"
                app:layout_constraintBottom_toBottomOf="@id/birthDateTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/birthDateTextView"
                tools:text="01.01.1000" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/notesTextView"
                style="@style/Theme.LoginApp.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_notes_label"
                android:textSize="@dimen/middle_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/profile_activity_logout_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>